--- a/src/index.css
+++ b/src/index.css
@@ -62,7 +62,6 @@
 .dogsPictureBox {
     width: 50%;
     height: 90%;
-    padding-top: 5%;
 }
 
 /* ___________________________________________________________InterestingIcon */
@@ -217,6 +216,120 @@
   position: absolute;
   bottom: 0;
   margin-bottom: 5%;
+}
+
+/* ________________________________________________________About */
+
+.overflow {
+  overflow: hidden;
+}
+
+.aboutWelcome {
+  font-size: 4rem;
+  font-weight: bolder;
+  text-align: center;
+}
+
+.aboutImage {
+ background-size: cover;
+ background-repeat: no-repeat;
+ width: 100%;
+ border-radius: 10%;
+}
+
+.aboutUsh2 {
+  font-size: 3rem;
+}
+
+.visionh2, .missionh2 {
+  font-size: 2rem;
+}
+
+.meetTeamh2 {
+  font-size: 3rem;
+}
+
+.gif {
+  width: 20%;
+  height: 20%;
+  border-radius: 50%;
+}
+
+.profBox {
+  text-align: center;
+}
+
+/* ____________________________________________________________________DogData */
+
+.doggy h1 {
+  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+}
+
+.dogo {
+  text-align: center;
+}
+
+.dogoimg {
+  width: 60%;
+  height: 500px;
+  border-radius: 20%;
+  object-fit: cover;
+}
+
+.dogowarper {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 20px;
+}
+
+.pdog {
+  text-align: center;
+  margin-bottom: 10px;
+}
+
+.dground {
+  background-repeat: no-repeat;
+  background-size: cover;
+  width: 100vh;
+  height: 100vh;
+  display: absolute ;
+}
+
+.background-container {
+background-color: #ffffff;
+  background-repeat: no-repeat;
+  background-size: cover;
+  width: 100vw;
+  height: 100vh;
+  /* Add any additional styles as needed */
+}
+
+
+
+.carousel-image {
+  width: 100%; /* Adjust the width as desired */
+  height: 500px; /* Let the height adjust proportionally */
+}
+
+
+
+.thumbnail-gallery {
+  display: flex;
+  justify-content: center;
+  margin-top: 20px;
+}
+
+.thumbnail {
+  width: 100px; /* Adjust the thumbnail size as desired */
+  height: 100px;
+  object-fit: cover;
+  margin: 0 5px;
+  cursor: pointer;
+}
+
+.thumbnail.active {
+  border: 2px solid red; /* Add a border to indicate the active thumbnail */
 }
 
 
